[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "cs-ml-tools"
authors = [
    {name = "Claudio Schill" },
]
description = "A collection of tools for machine learning"
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["version", "dependencies"]

[tool.setuptools_scm]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}